jEdit 4.4 version history
       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay,
Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey,
and Marcelo Vanzin for contributing to this release.

{{{ Bug fixes

- Fixed a NPE that happens when an error occurs before the view is loaded
  (Matthieu Casanova #2905487)
  
- Removed unnecessary popup warnings from InstallPanel when loading a
  pluginset. (Alan Ezust)

- fix #1439605 - remove installer.VariableGridLayout (r16596).

- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Removed write capability to the UrlVFS. Now http:// files are marked
  read-only. (Eric Le Lay # 2805986)

- When having two monitors the About dialog was appearing between them, one half
  on each monitor. Now it's position is relative to the active View
  (Matthieu Casanova)

- When removing text from the buffer, the event contentRemoved was sent before
  making the buffer dirty (oman002 #2944145)

- Selection foreground color broken when soft wrap. (Shlomy Reinstein #2946203)

- beanshell load() fails w/ exception. (Shlomy Reinstein #2927555)

- Using regex style encoding auto detectors, StringIndexOutOfBoundsException
  could happen when loading a file. (Kazutoshi Satoda)

- The encoding could be less accurate when opening a file from
  File System Browser. (SF.net bug #1524181,1721796 - Kazutoshi Satoda)

- When setting a new message in the status bar in a macro called from the
  Macro menu the message was cleared immediately (Matthieu Casanova #2964522)

- Fixed leaky memory usage after some specific text operations.
  (Kazutoshi Satoda)

- ALT key typing with Windows Look&Feel (for menu bar interaction) now
  behaves a bit closer to native Windows applications.